inc/assets/less/tc_custom.less
/* ... */
/* NO NAVBAR */
.no-navbar .navbar .navbar-inner, .sticky-enabled .navbar .navbar-inner {
  background: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  background-image: none;
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
  border: none;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
/* TRANSPARENT NAVBAR BACKGROUND */
.navbar-inner .nav-collapse .dropdown-menu>li>a:focus, .navbar-inner .nav-collapse .dropdown-menu>li>a:hover, .navbar-inner .nav-collapse .dropdown-submenu:focus>a, .navbar-inner .nav-collapse .dropdown-submenu:hover>a {
  background-color: rgba(0, 0, 0, 0.05);
}
h2.site-description {
  font-size: 18px;
  padding-top: 0px;
  line-height: 20px;
  font-style: italic;
}

/* 1px hack for chrome to not loose the focus on menu item hovering */
.chrome .navbar .navbar-inner .nav li {
  line-height: 21px;
}

/* Navbar links: increase padding for taller navbar */
.navbar .nav > li > a {
  padding: 5px 20px 5px 20px;
  font-size:16px;
}

.navbar .nav li.dropdown .caret {
  border-top-color: @navbarLinkColor;
  border-bottom-color: @navbarLinkColor;
  vertical-align: middle;
  margin-top: 0;
}

.dropdown-menu > li.current-menu-item > a, .dropdown-menu > li.current-menu-ancestor > a {
  text-decoration: none;
  background-color: @navbarBackground;
  /*#gradient > .vertical(@dropdownLinkBackgroundHover, darken(@dropdownLinkBackgroundHover, 5%));*/
}

.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
  background-color: @navbarBackground;
  background-image: none;
  text-decoration: none;
}

.dropdown-submenu > a:after {
  display: block;
  content: " ";
  & when (@is_rtl = true) {
  float: left;
  }
  & when (@is_rtl = false) {
    float: right;
  }
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
  border-width: 4px 0 4px 4px;
  border-left-color: #cccccc;
}


/* Hide responsive button by default when menu is regulat type*/
.tc-regular-menu .navbar .btn-toggle-nav,
.tc-regular-menu .navbar .btn-navbar {
  display: none;
}
.navbar .btn-navbar:hover, .navbar .btn-navbar:focus, .navbar .btn-navbar:active, .navbar .btn-navbar.active {
  outline: 0;
}

/* MENU
    -------------------------------------------------- */
.dropdown-menu {
  border: 0px solid rgba(0, 0, 0, 0.2);
}

.dropdown-submenu > .dropdown-menu {
  top: 110%;
  & when (@is_rtl = true) {
    right: 30%;
    right: 30%\9; /* IE 8 and below */
  }
  & when (@is_rtl = false) {
    left: 30%;
    left: 30%\9; /* IE 8 and below */
  }
  top: 0%\9; /* IE 8 and below */
  margin-top: -6px;
  margin-left: -1px;
  -webkit-border-radius: 6px 6px 6px 6px;
  -moz-border-radius: 6px 6px 6px 6px;
  border-radius: 6px 6px 6px 6px;
}
/* ie9 hack */
.ie9 .dropdown-submenu > .dropdown-menu {
  left: 30%;
}
/* ie hack */
.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-submenu:hover > a, .dropdown-submenu:focus > a {
filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
}




/* NEW MENU
  -------------------------------------------------- */

.tc-hover-menu.nav ul{
  top: 29px;
}
/* ie hack */
.ie .tc-hover-menu.nav ul {
  top: 27px;
}

/* OLD */
/* .tc-hover-menu.nav.nav li:hover > ul {
  display: block;
} */

.tc-hover-menu.nav li:hover > ul {
  display: block;
}
/* GENERAL MENU STYLE */
.nav .dropdown-menu {
  -webkit-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0 2px 8px rgba(0,0,0,.2);
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}
li.dropdown.active>.dropdown-toggle, .navbar .nav li.dropdown.open.active>.dropdown-toggle, .navbar .nav li.dropdown.open>.dropdown-toggle {
  background-color:transparent\9; /* IE8 and below */
  background-color: rgba(0, 0, 0, 0);
}
/* REVEAL SUBMENU BLOCK ON CLICK */
.navbar-inner .nav-collapse .nav li.open > ul {
  display: block
}
.navbar.resp {
  display: block;
  width: 100%;
}
/* SUBMENU MOVE EFFECT ON HOVER */
.tc-submenu-move .dropdown-menu>li>a:focus, .tc-submenu-move .dropdown-menu>li>a:hover, .tc-submenu-move .dropdown-submenu:focus>a, .tc-submenu-move .dropdown-submenu:hover>a {
  & when (@is_rtl = true) {
    padding-right: 1.63em;
  }
  & when (@is_rtl = false) {
    padding-left: 1.63em;
  }
}
/* ADJUST LEFT AND RIGHT MENU POSITIONS => align with socials (left) and tagline (right) */
.logo-left .navbar div>ul.nav>.menu-item:last-child>a {
  padding-right: 0;
}
.navbar .nav {
  margin-right: 0px;
}

.logo-right .navbar div>ul.nav>.menu-item:first-child>a {
  padding-left: 5px;
}

.pull-menu-left .nav-collapse{
  float: left
}
.pull-menu-right .nav-collapse{
  float: right
}

/* SIDE MENU
  -------------------------------------------------- */
/* prevent overflow-x when animating and when menu is visible */
.tc-sn-visible, .animating {
  overflow-x: hidden;
}
& when (@is_rtl = true) {
  /* rtl fix */
  .animating[class*=sn-right] { direction: ltr; }
  .animating[class*=sn-right] * { direction: rtl; }
}
#tc-page-wrap {
  position: relative;
  z-index: 15;
  background: inherit;
}

[class*=sn-right] #tc-sn {
  right: 0;
}
[class*=sn-left] #tc-sn {
  left: 0;
}

nav#tc-sn {
  visibility: hidden;
  position: fixed;
  top: 0;
  height: 100%;
  margin: 0;
  z-index: 10; /* Make sure the z-index is lower than the #page */
  overflow: hidden;
}

#tc-sn .tc-sn-inner {
  -webkit-transition: height 0s;
     -moz-transition: height 0s;
       -o-transition: height 0s;
          transition: height 0s;
  position: relative;
  height: 100%;
  top: 0;
  left: 0;
  overflow: auto;
  -webkit-overflow-scroll: auto; /* safari */
  padding: 15px;
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
  width: 100%;
}
/* ... */

